--- a/base/global/partials/footer.html
+++ b/base/global/partials/footer.html
@@ -13,13 +13,13 @@
     </div>
     <div class="footer-social">
       <a href="#" target="_blank"
-        ><img src="image/facebook.png" width="20"
+        ><img src="static/global/image/facebook.png" width="20"
       /></a>
       <a href="#" target="_blank"
-        ><img src="image/instagram.png" width="20"
+        ><img src="static/global/image/instagram.png" width="20"
       /></a>
       <a href="#" target="_blank"
-        ><img src="image/whatsapp.png" width="20"
+        ><img src="static/global/image/whatsapp.png" width="20"
       /></a>
     </div>
   </footer>
