--- a/base/global/partials/menu.html
+++ b/base/global/partials/menu.html
@@ -2,7 +2,7 @@
 <header>
   <figure>
     <img
-      src="image/logo.jfif"
+      src="static/global/image/logo.jfif"
       alt="logotipo jornada viagem"
       width="100"
       height="80"
