--- a/base/global/partials/head.html
+++ b/base/global/partials/head.html
@@ -16,10 +16,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
     <!-- css -->
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/carrossel.css" />
-    <title>Jornada Viagem | Home</title>
-    <link rel="icon" type="image/x-icon" href="/image/airplane.png" />
+    <link rel="stylesheet" href="static/global/css/style.css" />
+    <link rel="stylesheet" href="static/global/css/carrossel.css" />
+    <title>{{ titulo }}</title>
+    <link rel="icon" type="image/x-icon" href="static/global/image/airplane.png" />
   </head>
 
   <body>
